<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/results_text"
        android:layout_width="0dp"
        android:layout_height="124dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/initial_result_value"
        android:textAlignment="textEnd"
        android:textSize="@dimen/results_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_seven"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results_text" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_eight"
        app:layout_constraintBottom_toTopOf="@+id/five_button"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toBottomOf="@+id/results_text" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_nine"
        app:layout_constraintBottom_toTopOf="@+id/six_button"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toBottomOf="@+id/results_text" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_del"
        app:layout_constraintBottom_toTopOf="@+id/divide_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toBottomOf="@+id/results_text" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_four"
        app:layout_constraintBottom_toTopOf="@+id/one_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_five"
        app:layout_constraintBottom_toTopOf="@+id/two_button"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toBottomOf="@+id/eight_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_six"
        app:layout_constraintBottom_toTopOf="@+id/three_button"
        app:layout_constraintEnd_toStartOf="@+id/divide_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/nine_button" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toTopOf="@+id/multiply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toBottomOf="@+id/delete_button" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_one"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_button" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_two"
        app:layout_constraintBottom_toTopOf="@+id/equal_button"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toBottomOf="@+id/five_button" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_three"
        app:layout_constraintBottom_toTopOf="@+id/plus_button"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toBottomOf="@+id/six_button" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        app:layout_constraintBottom_toTopOf="@+id/subtract_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toBottomOf="@+id/divide_button" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equal_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_button" />

    <Button
        android:id="@+id/equal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/subtract_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/equal_button"
        app:layout_constraintTop_toBottomOf="@+id/three_button" />

    <Button
        android:id="@+id/subtract_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_subtract"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus_button"
        app:layout_constraintTop_toBottomOf="@+id/multiply_button" />

</androidx.constraintlayout.widget.ConstraintLayout>